--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    font-size: 120px;
+    font-size: 500%;
 }
 
 .table .house .icon:before {
