--- a/style.css
+++ b/style.css
@@ -5,7 +5,9 @@
     font-family: "Inter", sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
 }
 
-button, a, input {
+button,
+a,
+input {
     outline: none;
     border: none;
     background: transparent;
@@ -75,6 +77,7 @@ body {
 .player-info-wrapper[data-player-info=left] {
     justify-content: flex-start;
 }
+
 .player-info-wrapper[data-player-info=right] {
     justify-content: flex-end;
 }
@@ -145,6 +148,12 @@ body {
     transform: scale(0.99);
     filter: none;
     z-index: 40;
+}
+
+.table .house.disable {
+    transform: scale(1) !important;
+    filter: none !important;
+    cursor: default !important;
 }
 
 .icon {
