--- a/style.css
+++ b/style.css
@@ -1,211 +1,236 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Inter", sans-serif, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue';
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Inter", sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue";
 }
 
 button,
 a,
 input {
-    outline: none;
-    border: none;
-    background: transparent;
-    color: #000;
+  outline: none;
+  border: none;
+  background: transparent;
+  color: #000;
 }
 
 button {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    max-width: 100vw;
-    height: 100vh;
-    background-color: #dfdfdf;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 100vw;
+  height: 100vh;
+  background-color: #dfdfdf;
 }
 
 .table-wrapper {
-    display: flex;
-    gap: 10px;
+  display: flex;
+  gap: 10px;
+}
+
+.table-content {
+  position: relative;
 }
 
 .table-content.disable .house {
-    pointer-events: none;
+  pointer-events: none;
+}
+
+.winner-pop-up {
+  position: absolute;
+  display: none;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  top: 50%;
+  left: 50%;
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.328);
+  z-index: 1000;
+  width: 10rem;
+  height: 10rem;
+  transform: translate(-50%, -50%);
+}
+
+.winner-pop-up.active {
+  display: flex;
 }
 
 .menu {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 10px;
 }
 
 .menu-option {
-    background-color: #fff;
-    transition: all .3s;
+  background-color: #fff;
+  transition: all 0.3s;
 }
 
 .menu-option .icon {
-    color: #b7b7b7;
+  color: #b7b7b7;
 }
 
 .menu-option .menu-option-action {
-    padding: 10px;
+  padding: 10px;
 }
 
 .menu-option:hover {
-    transform: scale(1.1);
-    filter: drop-shadow(0 0 3px #00000030);
-    z-index: 60;
+  transform: scale(1.1);
+  filter: drop-shadow(0 0 3px #00000030);
+  z-index: 60;
 }
 
 .menu-option:active {
-    transform: scale(0.99);
-    filter: none;
-    z-index: 40;
+  transform: scale(0.99);
+  filter: none;
+  z-index: 40;
 }
 
 .player-info-wrapper {
-    display: flex;
-    width: 100%;
-    padding: 5px;
+  display: flex;
+  width: 100%;
+  padding: 5px;
 }
 
-.player-info-wrapper[data-player-info=left] {
-    justify-content: flex-start;
+.player-info-wrapper[data-player-info="left"] {
+  justify-content: flex-start;
 }
 
-.player-info-wrapper[data-player-info=right] {
-    justify-content: flex-end;
+.player-info-wrapper[data-player-info="right"] {
+  justify-content: flex-end;
 }
 
 .player-info {
-    display: flex;
-    gap: 10px;
-    align-items: center;
-    opacity: .6;
-    transition: all .3s;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  opacity: 0.6;
+  transition: all 0.3s;
 }
 
 .player-info.this-side {
-    opacity: 1;
-    transition: all .3s;
+  opacity: 1;
+  transition: all 0.3s;
 }
 
-.player-info.winner .player-username {
-    color: yellow;
+.player-info.winner {
 }
 
 .player-info.draw {
-    opacity: .6 !important;
+  opacity: 0.6 !important;
 }
 
 .player-username {
-    transition: all .3s;
+  transition: all 0.3s;
 }
 
 .player-side {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #acacac;
-    width: 25px;
-    height: 25px;
-    line-height: 100%;
-    color: #fff;
-    transition: all .3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #acacac;
+  width: 25px;
+  height: 25px;
+  line-height: 100%;
+  color: #fff;
+  transition: all 0.3s;
 }
 
 .table {
-    position: relative;
-    display: grid;
-    gap: 5px;
-    grid-template-columns: repeat(3, 1fr);
-    width: clamp(30vw, 500px, 70vw);
-    height: clamp(30vw, 500px, 70vw);
+  position: relative;
+  display: grid;
+  gap: 5px;
+  grid-template-columns: repeat(3, 1fr);
+  width: clamp(30vw, 500px, 70vw);
+  height: clamp(30vw, 500px, 70vw);
 }
 
 .table .house {
-    position: relative;
-    background-color: #fff;
-    cursor: pointer;
-    transition: all .3s;
-    overflow: hidden;
-    filter: none;
-    z-index: 50;
+  position: relative;
+  background-color: #fff;
+  cursor: pointer;
+  transition: all 0.3s;
+  overflow: hidden;
+  filter: none;
+  z-index: 50;
 }
 
 .table .house:hover {
-    transform: scale(1.05);
-    filter: drop-shadow(0 0 5px #00000030);
-    z-index: 60;
+  transform: scale(1.05);
+  filter: drop-shadow(0 0 5px #00000030);
+  z-index: 60;
 }
 
 .table .house:active {
-    transform: scale(0.99);
-    filter: none;
-    z-index: 40;
+  transform: scale(0.99);
+  filter: none;
+  z-index: 40;
 }
 
 .table .house.disable {
-    transform: scale(1) !important;
-    filter: none !important;
-    cursor: default !important;
+  transform: scale(1) !important;
+  filter: none !important;
+  cursor: default !important;
 }
 
 .icon {
-    color: #dfdfdf;
-    font-size: 24px;
+  color: #dfdfdf;
+  font-size: 24px;
 }
 
 .table .house .icon {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    font-size: 500%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  font-size: 500%;
 }
 
 .table .house .icon:before {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .line-winner {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    background-color: red;
-    z-index: 100;
-    border-radius: 10px;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  background-color: red;
+  z-index: 100;
+  border-radius: 10px;
+  transform: translate(-50%, -50%);
 }
 
-.line-winner[data-direction-type="line"] {}
+.line-winner[data-direction-type="line"] {
+}
 
 .line-winner[data-direction-type="line"][data-line="vertical"] {
-    width: 10px;
-    height: calc((100% / 3) * 2);
+  width: 10px;
+  height: calc((100% / 3) * 2);
 }
 
 .line-winner[data-direction-type="line"][data-line="horizontal"] {
-    width: calc((100% / 3) * 2);
-    height: 10px;
+  width: calc((100% / 3) * 2);
+  height: 10px;
 }
 
 .line-winner[data-direction-type="diagonal"] {
-    height: calc(100% - 25px);
-    width: 10px;
+  height: calc(100% - 25px);
+  width: 10px;
 }
 
 .line-winner[data-direction-type="diagonal"][data-line="primary"] {
-    transform: translate(-50%, -50%) rotate(-45deg);
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 .line-winner[data-direction-type="diagonal"][data-line="secondary"] {
-    transform: translate(-50%, -50%) rotate(45deg);
+  transform: translate(-50%, -50%) rotate(45deg);
 }
